:speech_balloon: Update all headers

--- a/assets/style/scss/style.scss
+++ b/assets/style/scss/style.scss
@@ -1,8 +1,8 @@
 /**
  * The admin style SCSS file.
  * 
- * @author		Matthias Kittsteiner, Simon Kraft
- * @license		GPL2 <https://www.gnu.org/licenses/gpl-3.0.html>
+ * @author		Epiphyt
+ * @license		GPL3 <https://www.gnu.org/licenses/gpl-3.0.html>
  * @version		0.1
  */
 .impressum-content-wrapper {
